[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite136_0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite136_1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite136_2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite136_3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite136_4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite136_5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite136_6.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite136_7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite136_8.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite137_0.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite137_1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite137_2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite137_3.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite137_4.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite137_5.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite137_6.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite137_7.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Particules/Entities/spadespin/sprite137_8.png" type="Texture" id=18]
[ext_resource path="res://Scripts/Projectiles/Entities/enproj.gd" type="Script" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 28.9982

[node name="AnimatedSprite" type="AnimatedSprite"]
frames = SubResource( 1 )
frame = 2
playing = true
script = ExtResource( 19 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
